modificações nos links

--- a/index.html
+++ b/index.html
@@ -35,23 +35,23 @@
           >
         </li>
         <li>
-          <a href="https://github.com/LuizHenrique111" target="_blank"
+          <a href="https://github.com/LuizHenriqueOliv?tab=repositories" target="_blank"
             >Veja meu portfólio</a
           >
         </li>
         <li>
-          <a href="#">Veja meu currículo</a>
+          <a href="https://www.linkedin.com/in/luizhenriqueoliv" target="_blank">Veja meu currículo</a>
         </li>
         <li>
           <a
             href="https://www.rocketseat.com.br/?utm_source=google&utm_medium=cpc&utm_campaign=lead&utm_term=perpetuo&utm_content=institucional-lead-home-texto-lead-brandkws-none-none-institucional-none-none-br-google&gad_source=1&gclid=Cj0KCQiAvP-6BhDyARIsAJ3uv7ayU3pv8s0YNmB9hY_sBagBV8Tfw0l-18R5WBq1GEea_gvsMoX-8msaAgcwEALw_wcB"
             target="_blank"
-            >Conheça a plataforma da Rocketseat</a
-          >
+            >Conheça a plataforma da Rocketseat
+          </a>
         </li>
       </ul>
       <div id="social-links">
-        <a href="https://github.com/LuizHenrique111" target="_blank"
+        <a href="https://github.com/LuizHenriqueOliv" target="_blank"
           ><ion-icon name="logo-github"></ion-icon
         ></a>
         <a href="https://instagram.com/luizhenrique.oliv" target="_blank"
@@ -60,15 +60,13 @@
         <a href="https://wa.me/5583991586379" target="_blank"
           ><ion-icon name="logo-whatsapp"></ion-icon
         ></a>
-        <a
-          href="https://www.linkedin.com/in/luiz-henrique-moreira-de-oliveira-567aa2264/"
-          target="_blank"
-          ><ion-icon name="logo-linkedin"></ion-icon
-        ></a>
+        <a href="https://www.linkedin.com/in/luizhenriqueoliv" target="_blank">
+          <ion-icon name="logo-linkedin"></ion-icon>
+        </a>
       </div>
       <footer>
-        feito por <a href="#">Luiz Henrique</a> em parceria com a
-        <a href="https://rocketseat.com.br">rocketseat</a>
+        feito por <a href="https://github.com/LuizHenriqueOliv" target="_blank">Luiz Henrique</a> em parceria com a
+        <a href="https://rocketseat.com.br" target="_blank">rocketseat</a>
       </footer>
     </div>
     <script
